<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/student_id_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="8dp"
                android:text="@string/student_id"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/student_id_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:autofillHints=""
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:inputType="number"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/name_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="8dp"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:autofillHints=""
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="8dp"
                android:text="@string/identification"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/id_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:autofillHints=""
                android:inputType="number"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="8dp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:autofillHints=""
                android:inputType="phone"
                tools:ignore="LabelFor"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="8dp"
                android:text="@string/email_address"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:autofillHints=""
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/birthday_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/birthday_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="8dp"
                android:text="@string/birthday"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <CalendarView
                android:id="@+id/calender_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:focusedMonthDateColor="@color/purple_500" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/country_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="8dp"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="LabelFor"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/address_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="8dp"
                android:text="@string/address_now"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="LabelFor"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/major_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="8dp"
                android:text="@string/major"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IT1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IT2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/code_language_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="8dp"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clang">

                </CheckBox>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/csharp">

                </CheckBox>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/java">

                </CheckBox>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/javascript">

                </CheckBox>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/python">

                </CheckBox>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/php">

                </CheckBox>
            </LinearLayout>


        </LinearLayout>

        <CheckBox
            android:id="@+id/confirmCheckbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/all_information_are_right">

        </CheckBox>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white">

        </Button>
    </LinearLayout>

</ScrollView>